# gameengine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Engine2D  Makefile  cmake_install.cmake  game
src/: main.cpp
src/engine/core/: FileUtils.h  Game.cpp  GameObject.cpp  GameObject.h  Render.cpp  Render.h  Shader.cpp  Shader.h  Window.cpp  Window.h  game.cpp
src/engine/gui/: ImageSelector.cpp  ImageSelector.h
